plugins { id 'application' }
java { sourceCompatibility = JavaVersion.VERSION_17; targetCompatibility = JavaVersion.VERSION_17 }
application { mainClass = 'org.picomatrix.bridge.tools.Main' }
dependencies {
    implementation project(':adapter-core')
    implementation project(':profile-vd-code')
    implementation project(':profile-generic-code')
    implementation 'org.smali:dexlib2:2.5.2'
    implementation 'org.json:json:20240303'
    implementation 'io.github.reandroid:ARSCLib:1.4.0'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'com.google.guava:guava:27.1-android'
}
